--- a/AkaneFacialOSC/AkaneFacialOSC.csproj
+++ b/AkaneFacialOSC/AkaneFacialOSC.csproj
@@ -12,7 +12,7 @@
 	<VersionPrefix>2.0.0</VersionPrefix>
     <VersionSuffix>RC1</VersionSuffix>
     <PlatformTarget>x64</PlatformTarget>
-    <DebugType>none</DebugType>
+    <DebugType>portable</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
