--- a/AkaneFacialOSC/AkaneFacialOSC.csproj
+++ b/AkaneFacialOSC/AkaneFacialOSC.csproj
@@ -10,7 +10,7 @@
 	<AllowUnsafeBlocks>False</AllowUnsafeBlocks>
 	<PackageId>Azw.FacialOsc</PackageId>
 	<VersionPrefix>2.0.0</VersionPrefix>
-    <VersionSuffix>RC3</VersionSuffix>
+    <VersionSuffix></VersionSuffix>
     <PlatformTarget>x64</PlatformTarget>
     <DebugType>portable</DebugType>
     <ApplicationIcon>Resources\AppIcon.ico</ApplicationIcon>
