--- a/CommonLibrary/CommonLibrary.csproj
+++ b/CommonLibrary/CommonLibrary.csproj
@@ -9,5 +9,30 @@
     <Platforms>AnyCPU;x64</Platforms>
     <BaseOutputPath>..\AkaneFacialOSC\bin</BaseOutputPath>
   </PropertyGroup>
-
+  <ItemGroup>
+    <None Update="Externals\SRanipal\SRanipal.dll">
+      <Link>SRanipal.dll</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Externals\SRanipal\SRWorks_Log.dll">
+      <Link>SRWorks_Log.dll</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Externals\SRanipal\ViveSR_Client.dll">
+      <Link>ViveSR_Client.dll</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Externals\PimaxEyeTracker\PimaxEyeTracker.dll">
+      <Link>PimaxEyeTracker.dll</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Externals\SRanipal\libHTC_License.dll">
+      <Link>libHTC_License.dll</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Externals\SRanipal\nanomsg.dll">
+      <Link>nanomsg.dll</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
