--- a/AkaneFacialOSCTracker/Properties/launchSettings.json
+++ b/AkaneFacialOSCTracker/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "AkaneFacialOSCTracker": {
       "commandName": "Project",
-      "commandLineArgs": "Lip ViveSRanipal 33772"
+      "commandLineArgs": "Lip Debug "
     }
   }
 }
