--- a/AkaneFacialOSC/AkaneFacialOSC.csproj
+++ b/AkaneFacialOSC/AkaneFacialOSC.csproj
@@ -15,6 +15,9 @@
     <DebugType>portable</DebugType>
     <ApplicationIcon>Resources\AppIcon.ico</ApplicationIcon>
     <Platforms>AnyCPU;x64</Platforms>
+    <Company>AZW</Company>
+    <Product>FacialOSC</Product>
+    <Authors>Akane Sayama</Authors>
   </PropertyGroup>
 
   <ItemGroup>
